# imslp

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: dependencies-update.yaml  main.yml
docs/source/: conf.py  index.rst
imslp/: __init__.py  client.py
imslp/helpers/: string_search.py
imslp/interfaces/: constants.py  internal.py  mw_api.py  scraping.py
tests/: test_import.py  test_imslp.py
